# FurAffinity-API

./: .gitignore  .gitlab-ci.yml  Procfile  README.md  logconfig.json  pyproject.toml
.github/workflows/: test.yml
app/: __version__.py  description.py  exceptions.py  main.py  models.py  robots.py
docs/: redoc.html  swagger.html
furaffinity_api/: exceptions.py  main.py  models.py
