[tool.poetry]
name = "app"
version = "1.5.3"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.5"
faapi = "3.11.6"
fastapi = "0.105.0"
orjson = "3.9.10"
uvicorn = "0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
