[tool.poetry]
name = "app"
version = "1.5.6"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.13.5"
faapi = "3.11.10"
fastapi = "0.115.0"
orjson = "3.10.7"
uvicorn = "0.30.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
