[tool.poetry]
name = "app"
version = "1.5.7"
description = ""
authors = ["Matteo Campinoti <matteo.campinoti94@gmail.com>"]

[tool.poetry.dependencies]
python = "3.13.12"
faapi = "3.12.1"
fastapi = "0.115.0"
orjson = "3.10.7"
uvicorn = "0.30.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
